--- a/learning/courses/qiskit-in-classrooms-computer-science/deutsch-jozsa.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/deutsch-jozsa.ipynb
@@ -16,9 +16,9 @@
     "# The Deutsch-Jozsa Algorithm\n",
     "\n",
     "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
-    "- `qiskit` v $\\geq$ 1.3\n",
-    "- `qiskit-ibm-runtime` v $\\geq$ 0.29.0\n",
-    "- `qiskit-aer` v $\\geq$ 15.0\n",
+    "- `qiskit` $\\geq$ v1.3\n",
+    "- `qiskit-ibm-runtime` $\\geq$ v0.29.0\n",
+    "- `qiskit-aer` $\\geq$ v15.0\n",
     "- `qiskit.visualization`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
@@ -67,7 +67,7 @@
    "id": "096da154-5663-4f46-8d9e-b6f163260706",
    "metadata": {},
    "source": [
-    "## 2. Quantum Parallelism and its limits\n",
+    "## 2. Quantum parallelism and its limits\n",
     "\n",
     "Part of the power of quantum computing is derived from \"quantum parallelism.\" which is essentially the ability to perform operations on multiple inputs at the same time, since the qubit input states could be in a superposition of multiple classically allowed states. HOWEVER, while a quantum circuit might be able to evaluate multiple input states at once, extracting all of that information in one go is impossible.\n",
     "\n",
@@ -95,12 +95,12 @@
     "- Step 3: Execute using Qiskit Runtime Primitives\n",
     "- Step 4: Post-processing and classical analysis\n",
     "\n",
-    "First, let's start by loading some necessary packages including Runtime primitives. We will also select the least-busy quantum computer available to us."
+    "First, let's start by loading some necessary packages, including Runtime primitives. We will also select the least-busy quantum computer available to us."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6ccc7364-7b6b-45f5-94b8-b1274006ee2f",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
     "\n",
     "\n",
-    "service = QiskitRuntimeService(channel=\"ibm_cloud\")\n",
+    "service = QiskitRuntimeService(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "# Use the least busy backend, or uncomment the loading of a specific backend like \"ibm_brisbane\".\n",
     "# backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)\n",
@@ -319,7 +319,7 @@
     "\n",
     "### Check-in question\n",
     "\n",
-    "How many times must we run the above algorithm to learn the function $f(x)$? Is this any better than the classical case? Would you rather have a classical or quantum computer to solve this problem\n",
+    "How many times must we run the above algorithm to learn the function $f(x)$? Is this any better than the classical case? Would you rather have a classical or quantum computer to solve this problem?\n",
     "\n",
     "<details>\n",
     "<summary>\n",
@@ -367,7 +367,7 @@
    "source": [
     "### 3.2 The Algorithm\n",
     "\n",
-    "The way Deutsch approached this problem was through the \"query model.\" In the query model, the input function ($f_i(x)$ above) is contained in a \"black box\" — we don't have direct access to its contents, but we can query the black box and it will give us the output of the function. We sometimes say that an \"oracle\" provides this information. See [Lesson 1: Quantum Query Algorithms](https://learning.quantum.ibm.com/course/fundamentals-of-quantum-algorithms/quantum-query-algorithms) of the Fundamentals of Quantum Algorithms course for more on the query model.\n",
+    "The way Deutsch approached this problem was through the \"query model.\" In the query model, the input function ($f_i(x)$ above) is contained in a \"black box\" — we don't have direct access to its contents, but we can query the black box and it will give us the output of the function. We sometimes say that an \"oracle\" provides this information. See [Lesson 1: Quantum Query Algorithms](/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction) of the Fundamentals of Quantum Algorithms course for more on the query model.\n",
     "\n",
     "To determine whether a quantum algorithm is more efficient than a classical algorithm in the query model, we can simply compare the number of queries we need to make of the black box in each case. In the classical case, in order to know if the function contained in the black box were balanced or constant, we would need to query the box two times to get both $f(0)$ and $f(1)$.\n",
     "\n",
@@ -375,7 +375,7 @@
     "\n",
     "Here's a circuit diagram of Deutsch's algorithm:\n",
     "\n",
-    "![Deutsch_algo.png](/learning/images/courses/qiskit-in-classrooms-computer-science/deutsch-jozsa/Deutsch_algo.avif)\n",
+    "![Circuit diagram of Deutsch's algorithm](/learning/images/courses/qiskit-in-classrooms-computer-science/deutsch-jozsa/Deutsch_algo.avif)\n",
     "\n",
     "To understand how this algorithm works, let's look at the quantum states of the qubits at the three points noted on the diagram above. Try to work out the states for yourself before clicking to view the answers:\n",
     "\n",
@@ -436,7 +436,7 @@
     "</details>\n",
     "\n",
     "\n",
-    "Looking through your answers for the above check-in questions, note that something a bit surprising happens. Although $U_f$ does nothing explicitly to the state of qubit 0, because it changes qubit 1 based on the state of qubit 0, it can happen that this causes a phase shift in qubit 0. This is known as the \"phase-kickback\" phenomenon, and is discussed in more detail in [Lesson 1: Quantum Query Algorithms](https://learning.quantum.ibm.com/course/fundamentals-of-quantum-algorithms/quantum-query-algorithms) of the Fundamentals of Quantum Algorithms course.\n",
+    "Looking through your answers for the above check-in questions, note that something a bit surprising happens. Although $U_f$ does nothing explicitly to the state of qubit 0, because it changes qubit 1 based on the state of qubit 0, it can happen that this causes a phase shift in qubit 0. This is known as the \"phase-kickback\" phenomenon, and is discussed in more detail in [Lesson 1: Quantum Query Algorithms](/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction) of the Fundamentals of Quantum Algorithms course.\n",
     "\n",
     "Now that we understand how this algorithm works, let's implement it with Qiskit."
    ]
@@ -786,12 +786,12 @@
    "id": "c601a252-d1d4-4def-b9a4-d05494d34899",
    "metadata": {},
    "source": [
-    "Above, the first line of the output is the bitstring of measurement outcomes. The second line outputs whether the bitstring implies that the function was balanced or constant. If the bit string contained all zeroes, then it was constant; if not, it was balanced. So, with just a single run of the above quantum circuit, we can determine whether the function is constant or balanced!\n",
+    "Above, the first line of the output is the bitstring of measurement outcomes. The second line outputs whether the bitstring implies that the function was balanced or constant. If the bitstring contained all zeroes, then it was constant; if not, it was balanced. So, with just a single run of the above quantum circuit, we can determine whether the function is constant or balanced!\n",
     "\n",
     "### Check-in question\n",
     "\n",
     "\n",
-    "How many queries would it take a classical computer to determine with 100% certainty whether a function were constant or balanced? Remember, classically, a single query only allows you to apply the function to a single bit string.\n",
+    "How many queries would it take a classical computer to determine with 100% certainty whether a function were constant or balanced? Remember, classically, a single query only allows you to apply the function to a single bitstring.\n",
     "\n",
     "<details>\n",
     "<summary>\n",
@@ -800,7 +800,7 @@
     "\n",
     "</summary>\n",
     "\n",
-    "There are $2^n$ possible bit string to check, and in the worst case, you would need to test $2^n/2+1$ of these. For example, if the function were constant, and you kept measuring \"1\" as the output of the function, then you couldn't be certain that it was truly constant until you checked over half of the results. Before then, you might have just been very unlucky to keep measuring \"1\" on a balanced function. It's like flipping a coin over and over and it landing heads every time. It's unlikely, but not impossible.\n",
+    "There are $2^n$ possible bitstrings to check, and in the worst case, you would need to test $2^n/2+1$ of these. For example, if the function were constant, and you kept measuring \"1\" as the output of the function, then you couldn't be certain that it was truly constant until you checked over half of the results. Before then, you might have just been very unlucky to keep measuring \"1\" on a balanced function. It's like flipping a coin over and over and it landing heads every time. It's unlikely, but not impossible.\n",
     "\n",
     "</details>\n",
     "\n",
@@ -841,7 +841,7 @@
     "|\\Psi\\rangle = |-\\rangle_{n} \\otimes |+\\rangle_{n-1} \\otimes |+\\rangle_{n-2} \\otimes ... \\otimes |+\\rangle_0\n",
     "$\n",
     "\n",
-    "   The state of qubits 1 through $n$ can be written more simply as a sum over all $2^n$ the $n$-qubit basis states $|00...00\\rangle, |00...01\\rangle, |000...11\\rangle, ..., |111...11\\rangle$. We call the set of these basis states $\\Sigma^n$. (See [Fundamentals of Quantum Algorithms](https://learning.quantum.ibm.com/course/fundamentals-of-quantum-algorithms/quantum-query-algorithms#the-deutsch-jozsa-algorithm) for more details.)\n",
+    "   The state of qubits 1 through $n$ can be written more simply as a sum over all $2^n$ the $n$-qubit basis states $|00...00\\rangle, |00...01\\rangle, |000...11\\rangle, ..., |111...11\\rangle$. We call the set of these basis states $\\Sigma^n$. (See [Fundamentals of Quantum Algorithms](/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm) for more details.)\n",
     "\n",
     "$\n",
     "|\\Psi\\rangle = |-\\rangle \\otimes \\frac{1}{\\sqrt{2^n}}\\sum\\limits_{x \\in \\Sigma^n}{|x\\rangle}\n",
@@ -865,7 +865,7 @@
     "|\\Psi\\rangle = |-\\rangle \\otimes \\frac{1}{2^n}\\sum\\limits_{x \\in \\Sigma^n}\\sum\\limits_{y \\in \\Sigma^n}{(-1)^{(s \\cdot x) + (x \\cdot y)}|y\\rangle}\n",
     "$\n",
     "\n",
-    "4. Next step is to measure the first $n$ bits. But what will we measure? It turns out that the state above simplifies to:  $|\\Psi\\rangle = |-\\rangle \\otimes |s\\rangle$, but that's far from obvious. If you'd like to follow through the math, see John Watrous' [Fundamentals of Quantum Algorithms](https://learning.quantum.ibm.com/course/fundamentals-of-quantum-algorithms/quantum-query-algorithms#the-bernstein-vazirani-problem) course. The point is, though, that the phase kickback mechanism leads to the input qubits being in the state $|s\\rangle$. So, to find out what the secret string $s$ was, you simply need to measure the qubits!\n",
+    "4. Next step is to measure the first $n$ bits. But what will we measure? It turns out that the state above simplifies to:  $|\\Psi\\rangle = |-\\rangle \\otimes |s\\rangle$, but that's far from obvious. If you'd like to follow through the math, see John Watrous' [Fundamentals of Quantum Algorithms](/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm#the-bernstein-vazirani-problem) course. The point is, though, that the phase kickback mechanism leads to the input qubits being in the state $|s\\rangle$. So, to find out what the secret string $s$ was, you simply need to measure the qubits!\n",
     "\n",
     "\n",
     "### Check-in question\n",
@@ -1037,7 +1037,7 @@
    "source": [
     "So, with just a single query, the Deutsch-Jozsa algorithm will return the string $s$ used in the function: $f(x)=x \\cdot s$ when we apply it to the Bernstein-Vazirani problem. With a classical algorithm, one would need $n$ queries to solve the same problem.\n",
     "\n",
-    "## 5. Conclusion:\n",
+    "## 5. Conclusion\n",
     "\n",
     "We hope that by examining these simple examples, we've given you a better intuition for how quantum computers are able to harness superposition, entanglement, and interference to achieve their power over classical computers.\n",
     "\n",
@@ -1051,7 +1051,7 @@
    "id": "c76273ac-ad3c-4c82-94e8-213e887dc7b7",
    "metadata": {},
    "source": [
-    "## 6. Review and Questions\n",
+    "## 6. Review and questions\n",
     "\n",
     "### Critical concepts:\n",
     "- the Deutsch and Deutsch-Jozsa algorithms use quantum parallelism combined with interference to find an answer to a problem faster than a classical computer can.\n",
@@ -1059,7 +1059,7 @@
     "- The Deutsch-Jozsa algorithm offers a polynomial speedup over any deterministic classical algorithm.\n",
     "- The Deutsch-Jozsa algorithm can be applied to a different problem, called the Bernstein-Vazirani problem, to find a hidden string encoded in a function.\n",
     "\n",
-    "### True/False:\n",
+    "### True/false:\n",
     "1. T/F Deutsch's algorithm is a special case of the Deutsch-Jozsa algorithm where the input is a single qubit.\n",
     "2. T/F The Deutsch and Deutsch-Jozsa algorithms use quantum superposition and interference to achieve their efficiency.\n",
     "4. T/F The Deutsch-Jozsa algorithm requires multiple function evaluations to determine if a function is constant or balanced.\n",
@@ -1068,7 +1068,7 @@
     "\n",
     "\n",
     "\n",
-    "### Short Answer:\n",
+    "### Short answer:\n",
     "\n",
     "1. How long would it take a classical algorithm to solve the Deutsch-Jozsa problem in the worst case?\n",
     "\n",
@@ -1076,7 +1076,7 @@
     "\n",
     "3. Describe the phase-kickback mechanism and how it works to solve the Deutsch-Josza and Bernstein-Vazirani problems.\n",
     "\n",
-    "### Challenge Problem:\n",
+    "### Challenge problem:\n",
     "1. The Deutsch-Jozsa algorithm: Recall that you had a check-in question asking you to work out the intermediate qubit states $\\pi_1$, and $\\pi_2$ of the Deutsch's algorithm. Do the same for the intermediate $n+1$-qubit states $\\pi_1$, and $\\pi_2$ of the Deutsch-Jozsa algorithm, for the specific case that $n=2$. Then, verify that $\\pi_3 = |-\\rangle \\otimes \\sum\\limits_{x_0...x_n}(-1)^{f(x_0...x_n)}|x_0 ... x_n\\rangle$, again, for the specific case that $n=2$."
    ]
   }
