--- a/learning/courses/qiskit-in-classrooms-computer-science/deutsch-jozsa.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/deutsch-jozsa.ipynb
@@ -13,7 +13,7 @@
    "id": "e761a401-3dd0-4c3c-9333-0d89da48fb34",
    "metadata": {},
    "source": [
-    "# The Deutsch-Jozsa Algorithm\n",
+    "# The Deutsch-Jozsa algorithm\n",
     "\n",
     "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
     "- `qiskit` $\\geq$ v1.3\n",
