--- a/learning/courses/qiskit-in-classrooms-computer-science/quantum-key-distribution.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/quantum-key-distribution.ipynb
@@ -717,7 +717,7 @@
    "id": "00a56f30-6b75-4f8d-b67a-47671063218b",
    "metadata": {},
    "source": [
-    "## QKD with an eavesdropper\n",
+    "## Experiment 2: QKD with an eavesdropper\n",
     "\n",
     "We will implement exactly the same protocol as before. This time, we will insert another set of measurements, by Eve, between Alice and Bob."
    ]
