--- a/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
@@ -5,12 +5,12 @@
    "id": "3e8391e9-be00-46b0-81a9-5474ae778663",
    "metadata": {},
    "source": [
-    "# Quantum Teleportation\n",
+    "# Quantum teleportation\n",
     "\n",
-    "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
-    "- `qiskit` v $\\geq$ 1.3\n",
-    "- `qiskit-ibm-runtime` v $\\geq$ 0.29.0\n",
-    "- `qiskit-aer` v $\\geq$ 15.0\n",
+    "For this Qiskit in Classrooms module, students must have a working Python environment with the following packages installed:\n",
+    "- `qiskit` $\\geq$ v1.3\n",
+    "- `qiskit-ibm-runtime` $\\geq$ v0.29.0\n",
+    "- `qiskit-aer` $\\geq$ v15.0\n",
     "- `qiskit.visualization`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
