--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -15,7 +15,7 @@
    "id": "132cdf03-164e-4334-aab6-206aacacc25b",
    "metadata": {},
    "source": [
-    "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
+    "For this Qiskit in Classrooms module, students must have a working Python environment with the following packages installed:\n",
     "- `qiskit` v $\\geq$ 1.3\n",
     "- `qiskit-ibm-runtime` v $\\geq$ 0.29.0\n",
     "- `qiskit-aer` v $\\geq$ 15.0\n",
