--- a/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
@@ -15,10 +15,10 @@
    "id": "bc3346f6",
    "metadata": {},
    "source": [
-    "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
-    "- `qiskit` v $\\geq$ 1.3\n",
-    "- `qiskit-ibm-runtime` v $\\geq$ 0.29.0\n",
-    "- `qiskit-aer` v $\\geq$ 15.0\n",
+    "For this Qiskit in Classrooms module, students must have a working Python environment with the following packages installed:\n",
+    "- `qiskit` $\\geq$ v 1.3\n",
+    "- `qiskit-ibm-runtime` $\\geq$ v 0.29.0\n",
+    "- `qiskit-aer` $\\geq$ v 15.0\n",
     "- `qiskit.visualization`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
