--- a/learning/courses/qiskit-in-classrooms-computer-science/quantum-key-distribution.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/quantum-key-distribution.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Quantum key distribution\n",
     "\n",
-    "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
+    "For this Qiskit in Classrooms module, students must have a working Python environment with the following packages installed:\n",
     "- `qiskit` $\\geq$ v1.3\n",
     "- `qiskit-ibm-runtime` $\\geq$ v0.29.0\n",
     "- `qiskit-aer` $\\geq$ v15.0\n",
