--- a/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
@@ -40,7 +40,7 @@
    "id": "a200b899-0c56-4f69-a7ba-0ca4d83e47cd",
    "metadata": {},
    "source": [
-    "## 1. Introduction and background\n",
+    "## Introduction and background\n",
     "\n",
     "Quantum teleportation is a technique in quantum physics that allows the transfer of quantum information from one location to another without physically moving particles. Unlike the sci-fi concept of teleportation, this process doesn't involve transporting matter. Instead, it relies on the principle of quantum entanglement, where two particles become linked regardless of distance. Through a series of precise measurements and classical communication, the quantum state of one particle can be recreated in another particle at a distant location, effectively \"teleporting\" the quantum information. In this module, we'll see how this works mathematically, and then we will implement quantum teleportation on a real quantum computer. The introduction here will be brief; for more background on quantum information, and more explanation about teleportation, we recommend John Watrous's course on the [Basics of quantum information](/learning/courses/basics-of-quantum-information), and in particular the section on [Teleportation.](/learning/courses/basics-of-quantum-information/entanglement-in-action/quantum-teleportation)\n",
     "\n",
@@ -85,7 +85,7 @@
     "\n",
     "The entangled of qubits in this way does not require that the qubits remain physically close to one another. In other words, we could entangle qubits, then separate them by a large distance, and use their entanglement to send information. An entangled state like the one above is a basic unit of entanglement, and is sometimes referred to as an \"e-bit\", a single bit of entanglement. These e-bits can be thought of as resources in quantum communication, since each e-bit shared between distant partners can be used, as we outline here, to move information from one location to another.\n",
     "\n",
-    "The first thought for many people learning about this for the first time is about violating relativity: can we use this to send information faster than light? By all means, keep questioning and probing scientific rules, but unfortunately this won't allow us to send information faster than light, for reasons that will become clear through the course of this module. Spoiler: amazingly it is NOT due to the speed at which this collapse propagates, which does appear to happen faster than light[1](https://www.nature.com/articles/nature15759)"
+    "The first thought for many people learning about this for the first time is about violating relativity: can we use this to send information faster than light? By all means, keep questioning and probing scientific rules, but unfortunately this won't allow us to send information faster than light, for reasons that will become clear through the course of this module. Spoiler: amazingly it is NOT due to the speed at which this collapse propagates, which does appear to happen faster than light [[1]](https://www.nature.com/articles/nature15759)."
    ]
   },
   {
@@ -103,7 +103,7 @@
    "id": "03fe38b1-66fe-4c50-8403-d8c64197b5c6",
    "metadata": {},
    "source": [
-    "## 2. Quantum operators (gates)\n",
+    "## Quantum operators (gates)\n",
     "\n",
     "Feel free to skip this section if you are already familiar with quantum gates. If you want to understand these gates better, check out [Basics of quantum information](/learning/courses/basics-of-quantum-information), especially the first two lessons, on IBM Quantum Learning.\n",
     "\n",
@@ -328,7 +328,7 @@
    "id": "476c82d2-4c58-4c25-8f0d-646cd4afb757",
    "metadata": {},
    "source": [
-    "## 3. Theory\n",
+    "## Theory\n",
     "\n",
     "Let's lay out the protocol for quantum teleportation using math. Then, in the next section, we'll realize this setup using a quantum computer.\n",
     "\n",
@@ -454,15 +454,15 @@
    "id": "efa0afed-97e7-42fd-a06d-7c095e703537",
    "metadata": {},
    "source": [
-    "## 4. Experiment 1: Basic teleportation\n",
+    "## Experiment 1: Basic teleportation\n",
     "\n",
-    "IBM Quantum recommends tackling quantum computing problems using a framework we call \"Qiskit Patterns\". It consists of the following steps.\n",
+    "IBM Quantum recommends tackling quantum computing problems using a framework we call \"Qiskit patterns\". It consists of the following steps.\n",
     "- Step 1: Map your problem to a quantum circuit\n",
     "- Step 2: Optimize your circuit for running on real quantum hardware\n",
     "- Step 3: Execute your job on IBM quantum computers using Runtime Primitives\n",
     "- Step 4: Post-process the results\n",
     "\n",
-    "### 4.1. Step 1: Map your problem to a quantum circuit\n",
+    "### Step 1: Map your problem to a quantum circuit\n",
     "\n",
     "All the math we did above was outlining step 1. We will implement it now, building our quantum circuit using Qiskit! We start creating a quantum circuit with three qubits, and entangling the two qubits of Alice and Bob. We will take these to be qubits 1 and 2, and we will reserve qubit 0 for the secret state."
    ]
@@ -577,7 +577,7 @@
    "source": [
     "So if we've done this correctly, our measurement on Bob's qubit should yield a $|0\\rangle$ state. Of course, these measurements are probabilistic. So if there is even a small chance of measuring Bob's qubit to be in the $|1\\rangle$ state, then a single measurement could result in $|1\\rangle.$ We would really want to make many measurements to be assured that the probability of $|0\\rangle$ is quite high.\n",
     "\n",
-    "### 4.2. Step 2: Optimize problem for quantum execution\n",
+    "### Step 2: Optimize problem for quantum execution\n",
     "\n",
     "This step takes the operations we want to perform and expresses them in terms of the functionality of a specific quantum computer. It also maps our problem onto the layout of the quantum computer.\n",
     "\n",
@@ -695,7 +695,7 @@
    "id": "bff5bb04-fc2d-45f4-ab26-98fe9a5a0b5c",
    "metadata": {},
    "source": [
-    "### 4.3. Step 3: Execute\n",
+    "### Step 3: Execute\n",
     "\n",
     "Use the sampler to run your job, with the circuit as an argument."
    ]
@@ -722,7 +722,7 @@
    "id": "a6a68d85-486a-401a-8336-805713eafd57",
    "metadata": {},
    "source": [
-    "### 4.4. Step 4: Post-processing and analysis\n",
+    "### Step 4: Post-processing and analysis\n",
     "\n",
     "Let's plot the results and interpret them."
    ]
