--- a/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
@@ -230,7 +230,7 @@
     "<details>\n",
     "<summary>\n",
     "\n",
-    "<b>Solution:</b>\n",
+    "<b>Answer:</b>\n",
     "\n",
     "</summary>\n",
     "\n",
@@ -981,9 +981,9 @@
    "id": "ede2724d-536b-472a-b4bd-b1276b5b851d",
    "metadata": {},
    "source": [
-    "## 6. Review and questions:\n",
+    "## 6. Review and questions\n",
     "\n",
-    "### Critical concepts:\n",
+    "### Critical concepts\n",
     "\n",
     "- Qubits can be entangled, meaning a measurement of one qubit affects or even determines the state of another qubit.\n",
     "- Entanglement differs from classical correlations; for example, qubits A and B could be in a superposition of states like $\\alpha_0|00\\rangle+\\alpha_1|11\\rangle.$ The state of A or B could be undetermined by nature, and yet A and B could still be guaranteed to be in the same state.\n",
@@ -993,14 +993,14 @@
     "- The more gates you add in sequence (especially 2-qubit gates) the more errors and noise you can expect.\n",
     "\n",
     "\n",
-    "### T/F Questions:\n",
+    "### True/False questions\n",
     "\n",
     "1. T/F Quantum teleportation can be used to send information faster than light.\n",
     "2. T/F Modern evidence suggests that the collapse of a quantum state propagates faster than light.\n",
     "3. T/F In Qiskit, qubits are ordered in states with the lowest-numbered qubit on the right, as in $|q_3,q_2,q_1, q_0\\rangle$\n",
     "\n",
     "\n",
-    "### MC Questions:\n",
+    "### MC questions\n",
     "\n",
     "1. Qubits A and B are entangled, then separated by a great distance $d$. Qubit A is measured. Which statement is correct about the speed at which the state of qubit B is affected?\n",
     "\n",
@@ -1037,7 +1037,7 @@
     "- d. $\\frac{4}{5}|0\\rangle_B|1\\rangle_A+\\frac{3}{5}|1\\rangle_B|0\\rangle_A$\n",
     "- e. $|0\\rangle_B|0\\rangle_A$\n",
     "\n",
-    "### Discussion Questions:\n",
+    "### Discussion questions\n",
     "\n",
     "1. Describe the quantum teleportation protocol, from start to finish, to your partner/group. See if they have anything to add, or if they have questions.\n",
     "\n",
