update authentication channel

--- a/learning/courses/qiskit-in-classrooms-computer-science/quantum-key-distribution.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/quantum-key-distribution.ipynb
@@ -512,7 +512,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "# service = QiskitRuntimeService()\n",
-    "service = QiskitRuntimeService(channel=\"ibm_cloud\")\n",
+    "service = QiskitRuntimeService(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "# Use the least busy backend, or uncomment the loading of a specific backend like \"ibm_brisbane\".\n",
     "# backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)\n",
