--- a/learning/courses/utility-scale-quantum-computing/bits-gates-and-circuits.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/bits-gates-and-circuits.ipynb
@@ -1556,12 +1556,7 @@
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# If this is your first time running your circuit on a real device,\n",
-    "# make sure you copy your API Token from [IBM Quantum Platform](https://quantum.cloud.ibm.com//)\n",
-    "# QiskitRuntimeService.save_account(\n",
-    "# channel=\"ibm_cloud\", token=your_api_key, instance=your_crn, set_as_default=True,overwrite=True,)\n",
-    "\n",
-    "service = QiskitRuntimeService(channel=\"ibm_cloud\")\n",
+    "service = QiskitRuntimeService()\n",
     "service.backends()"
    ]
   },
@@ -1573,7 +1568,7 @@
    "outputs": [],
    "source": [
     "# You can specify the device\n",
-    "# backend = service.backend('ibm_kyiv')"
+    "# backend = service.backend('ibm_kingston')"
    ]
   },
   {
