--- a/learning/courses/utility-scale-quantum-computing/quantum-circuit-optimization.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-circuit-optimization.ipynb
@@ -1260,7 +1260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "service = QiskitRuntimeService(channel=\"ibm_cloud\")"
+    "service = QiskitRuntimeService(channel=\"ibm_quantum_platform\")"
    ]
   },
   {
