--- a/learning/courses/utility-scale-quantum-computing/utility-ii.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/utility-ii.ipynb
@@ -884,7 +884,7 @@
     }
    ],
    "source": [
-    "channel = \"ibm_cloud\"\n",
+    "channel = \"ibm_quantum_platform\"\n",
     "service = QiskitRuntimeService(channel=channel)\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "backend.name"
