--- a/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8f24b6b9-db1b-4077-8660-e355e377807e",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
     "# Load the Qiskit Runtime service\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "service = QiskitRuntimeService(channel=\"ibm_cloud\")\n",
+    "service = QiskitRuntimeService()\n",
     "\n",
     "# Use the least busy backend, or uncomment the loading of a specific backend like \"ibm_brisbane\".\n",
     "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)\n",
