--- a/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
@@ -1459,10 +1459,9 @@
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "\n",
     "# Use a quantum device\n",
-    "# QiskitRuntimeService.save_account(channel=\"ibm_cloud\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
-    "service = QiskitRuntimeService(channel=\"ibm_cloud\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(min_num_qubits=127)\n",
-    "# backend = service.backend(\"ibm_kyiv\")\n",
+    "# backend = service.backend(\"ibm_kingston\")\n",
     "\n",
     "# You can test your programs locally with a fake backend (local testing mode)\n",
     "# backend = FakeBrisbane()\n",
