--- a/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
@@ -332,7 +332,7 @@
     "\n",
     "Let's lay out the protocol for quantum teleportation using math. Then, in the next section, we'll realize this setup using a quantum computer.\n",
     "\n",
-    "__Alice and Bob entangle their qubits:__ Initially, Alice's qubit and Bob's qubit are each, separately in the $|0\\rangle$ state (a fine assumption and also the correct initialization for IBM quantum computers). We can write this as $|0\\rangle_B|0\\rangle_A$ or simply as $|00\\rangle$. Let's calculate what happens when Alice and Bob act with the Hadamard gate on Alice's qubit, and then a CNOT gate with Alice's qubit as the control and Bob's as the target:\n",
+    "__Alice and Bob entangle their qubits:__ Initially, Alice's qubit and Bob's qubit are each, separately in the $|0\\rangle$ state (a fine assumption and also the correct initialization for IBM&reg; quantum computers). We can write this as $|0\\rangle_B|0\\rangle_A$ or simply as $|00\\rangle$. Let's calculate what happens when Alice and Bob act with the Hadamard gate on Alice's qubit, and then a CNOT gate with Alice's qubit as the control and Bob's as the target:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -638,7 +638,7 @@
    "id": "85f3e53c-f910-4427-a977-f6e24798542c",
    "metadata": {},
    "source": [
-    "A \"sampler\" is a primitive designed to sample possible states resulting from a quantum circuit, and collect statistics on what states might be measured and with what probability. We import the Qiskit Runtime sampler here:"
+    "A \"Sampler\" is a primitive designed to sample possible states resulting from a quantum circuit, and collect statistics on what states might be measured and with what probability. We import the Qiskit Runtime Sampler here:"
    ]
   },
   {
