rmv page-breaking blocks

--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -36,12 +36,7 @@
     "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
     "\n",
     "\n",
-    "<ImageLink\n",
-    "  title=\"Bell’s Inequality and the Power of Quantum Entanglement\"\n",
-    "  alt=\"YT thumbnail\"\n",
-    "  href=\"https://youtu.be/pS69lqCMdy8?si=jFnyrUKjlyw2xRyi\"\n",
-    "  src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit/YT-thumb.avif\"\n",
-    "/>"
+    "Video title=\"Bell’s Inequality and the Power of Quantum Entanglement\""
    ]
   },
   {
