--- a/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
@@ -35,12 +35,8 @@
     "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
     "\n",
     "\n",
-    "<ImageLink\n",
-    "  title=\"Superposition: The Quantum Principle That Changes Everything\"\n",
-    "  alt=\"YT thumbnail\"\n",
-    "  href=\"https://youtu.be/TZ-sUHK8vVQ?si=eWsPn1Vd6wDtt6Uh\"\n",
-    "  src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/YT-thumb.avif\"\n",
-    "/>"
+    "\n",
+    "Video title=\"Superposition: The Quantum Principle That Changes Everything\"\n"
    ]
   },
   {
