updates to quantum technology lesson in QBF course

--- a/learning/courses/quantum-business-foundations/quantum-technology.mdx
+++ b/learning/courses/quantum-business-foundations/quantum-technology.mdx
@@ -12,17 +12,17 @@ By the end of this module, you should be able to:
 
 ## IBM Quantum technology
 
-IBM’s fleet of 127+ qubit quantum computers is the largest in the world. These quantum computers use superconducting transmon qubits, which are not the only kind of qubit, but which have many advantages. Combining our world-class quantum computers with Qiskit enables our users to explore how quantum computing can be useful in the world, today. Industry partners and researchers are using IBM Quantum technology to explore meaningful computations and realistic applications. Let's explore the breadth of programs and services IBM Quantum offers partners.
+The fleet of IBM&reg; quantum computers, all with at minimum 127 qubits, is the largest in the world. These quantum computers use superconducting transmon qubits, which are not the only kind of qubit, but which have many advantages. Combining our world-class quantum computers with Qiskit enables our users to explore how quantum computing can be useful in the world, today. Industry partners and researchers are using IBM Quantum&reg; technology to explore meaningful computations and realistic applications. Let's explore the breadth of programs and services IBM Quantum offers partners.
 
 If you are part of an institution that is a member of the IBM Quantum Network, make sure you to reach out to your institution's quantum computing group to determine what benefits you have access to.
 
 ### IBM Quantum Platform
 
-IBM Quantum provides a suite of quantum computing tools that brings together all of the research and development resources that users need to do great work, in one place. Four important pages/resources are the IBM Quantum Platform, IBM Quantum Documentation, and IBM Quantum Learning.
+IBM Quantum provides a suite of quantum computing tools that brings together all of the research and development resources that users need to do great work, in one place.
 
-* [IBM Quantum Platform](https://quantum-computing.ibm.com/) serves as the primary access point for the product ecosystem, where users can get their API keys, track jobs, and compare systems. From the Platform dashboard, users will find a summary of their access details, in addition to links for helpful destinations across the other apps, including featured courses, documentation resources, and links to learning tools.
-* [IBM Quantum Documentation](https://docs.quantum-computing.ibm.com/) aggregates Qiskit documentation, service documentation, and API reference information into one location, organized in a way that supports users' natural workflows.
-* [IBM Quantum Learning](https://learning.quantum-computing.ibm.com/) is the home for educational material and experimentation tools, and is designed to help get users up to speed on various quantum computing topics and use cases.
+* [IBM Quantum Platform](https://quantum.cloud.ibm.com) serves as the primary access point for the product ecosystem, where users can get their API keys, track jobs, and compare QPUs. From the Platform dashboard, users will find a summary of their access details, in addition to links for helpful destinations across the other apps, including featured courses, documentation resources, and links to learning tools.
+* [IBM Quantum Documentation](https://quantum.cloud.ibm.com/docs) aggregates Qiskit documentation, service documentation, and API reference information into one location, organized in a way that supports users' natural workflows.
+* [IBM Quantum Learning](https://quantum.cloud.ibm.com/learning) is the home for educational material and experimentation tools, and is designed to help get users up to speed on various quantum computing topics and use cases.
 
 ### Qiskit Runtime on IBM Cloud
 
@@ -48,7 +48,7 @@ IBM Quantum processors use a physical type of qubit called a **superconducting t
 
 ### Measuring quantum computing performance
 
-A universal fault–tolerant quantum computer is the grand challenge of quantum computing. It is a device that can properly perform universal quantum operations using unreliable components. Today’s quantum computers are not fault tolerant.
+A universal fault–tolerant quantum computer is the grand challenge of quantum computing. It is a device that can properly perform universal quantum operations using unreliable components. Today’s quantum computers are not fault-tolerant.
 
 To compare quantum computers to each other, qubit count is not sufficient. Many other details must be considered, such as error rates and how the system is wired. There are four key metrics for measuring quantum computing performance:
 
@@ -98,7 +98,7 @@ Read the question below, think about your answer, then click the triangle to rev
 <details>
 <summary>
 
-True or false: Quantum volume refers to the size of the cryogenic refrigerators that house IBM's quantum computers.
+True or false: Quantum volume refers to the size of the cryogenic refrigerators that house IBM quantum computers.
 
 </summary>
 
@@ -117,8 +117,6 @@ Today’s quantum computers, and those expected for the foreseeable future, are 
 IBM Quantum and the University of California, Berkeley presented evidence that quantum computers can provide value sooner than expected thanks to advances in IBM Quantum hardware and error mitigation methods. Beyond just a proof of concept, we delivered results accurate enough to be useful. The model of computation we explored with this work is a core facet of many algorithms designed for near-term quantum computers.
 
 The feedback loop between quantum and classical is key to advancing quantum technologies. With a focus on quantum utility, we use quantum to probe complex problems that challenge existing high-performance compute frameworks, then check the results classically. This continued back-and-forth of quantum running a complex circuit and classical computers verifying the quantum results will improve both computational domains and provide users confidence in the abilities of near-term quantum computers.
-
-Optional reading — click on the triangle to read more about the experiment
 
 <ImageLink
   title="Quantum utility"
@@ -187,7 +185,7 @@ You can keep these key takeaways in mind:
 
 * Today’s quantum computers are not fault tolerant.
 * Quantum Volume is a holistic measure of how good a quantum computer is. The higher the Quantum Volume, the better. Talking only about qubit count is misleading.
-* To measure the performance of quantum computers, there are three key metrics: scale, quality, and speed.
+* To measure the performance of quantum computers, there are four key metrics: scale, quality, speed, and layer fidelity.
 * A joint IBM Quantum-UC Berkeley experiment presented evidence of IBM quantum computers delivering reliable, accurate results for challenging simulation problems at a scale of 127 qubits.
 * Quantum-centric supercomputing means treating quantum as one piece of a broader HPC paradigm with classical and quantum working as one computational unit.
 * The IBM Quantum Network website is a key resource that you can use to stay current on IBM Quantum technology and research.
