--- a/learning/courses/quantum-business-foundations/quantum-technology.mdx
+++ b/learning/courses/quantum-business-foundations/quantum-technology.mdx
@@ -148,9 +148,9 @@ Optional reading — click on the triangle to read more about the experiment
 
 ### Error Correction
 
-Error correction has been a key area of research for decades. But for most of that time, theoretical error correction techniques have been impractical to implement on real quantum computers, most often due to the very large number of qubits needed. Indeed, many experts predict that practical fault tolerant quantum computing (FTQC) will require millions of physical qubits. But in a recent paper published on the cover of Nature, researchers from IBM introduced a new code, which we call the Gröss code, that overcomes that limitation.
+Error correction has been a key area of research for decades. But for most of that time, theoretical error correction techniques have been impractical to implement on real quantum computers, most often due to the very large number of qubits needed. Indeed, many experts predict that practical fault tolerant quantum computing (FTQC) will require millions of physical qubits. But in a recent paper published on the cover of Nature, researchers from IBM introduced a new code, which we call the Gross code, that overcomes that limitation.
 
-The paper [High-threshold and low-overhead fault-tolerant quantum memory](https://www.nature.com/articles/s41586-024-07107-7) describes the new quantum error-correcting code that is roughly 10 times more efficient than previous methods at protecting delicate quantum data from accumulating errors. To consider how much closer we are now to the beginning of error correction, consider that using the Gröss code, you can protect 12 logical qubits for roughly a million cycles of error checks using 288 qubits.
+The paper [High-threshold and low-overhead fault-tolerant quantum memory](https://www.nature.com/articles/s41586-024-07107-7) describes the new quantum error-correcting code that is roughly 10 times more efficient than previous methods at protecting delicate quantum data from accumulating errors. To consider how much closer we are now to the beginning of error correction, consider that using the Gross code, you can protect 12 logical qubits for roughly a million cycles of error checks using 288 qubits.
 
 It is not expected that error correction will suddenly replace error mitigation and error suppression. Rather, over the next few years, error mitigation and suppression will continue to play a pivotal role, alongside increasing numbers of error-corrected qubits.
 
