--- a/learning/courses/quantum-machine-learning/exam.mdx
+++ b/learning/courses/quantum-machine-learning/exam.mdx
@@ -5,11 +5,11 @@ description: Take a 20-question exam on the IBM Training site to test your quant
 
 # Exam & badge
 
-![A square badge stating the name of this course, foundational level, and issued by IBM Quantum.](/learning/images/courses/quantum-machine-learning/exam/badge.avif)
+![A square badge stating the name of this course, foundational level, and issued by IBM Quantum&reg;.](/learning/images/courses/quantum-machine-learning/exam/badge.avif)
 
 ## Test your knowledge
 
-After completing the reading and activities in this course, click the button below to navigate to IBM Training, where you can take the quantum machine learning badging exam.
+After completing the reading and activities in this course, click the button below to navigate to IBM&reg; Training, where you can take the quantum machine learning badging exam.
 
 The exam consists of 20 questions, and you must answer at least 16 correctly to pass. Upon receiving a passing score, your badge will automatically be sent to the email you used to register with IBM Training.
 
