--- a/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "\n",
     "\n",
-    "Video title=\"Superposition: The Quantum Principle That Changes Everything\"\n"
+    "Video title=\"Superposition: The Quantum Principle That Changes Everything\""
    ]
   },
   {
